<resources>
    <string name="app_name">Codojo</string>
    <string name="hintUsername">Felhasználónév</string>
    <string name="registerHintPassw">Jelszó</string>
    <string name="registerHintPwdAgain">Jelszó megerősítése</string>
    <string name="registerBtn">Regisztráció</string>
    <string name="textAlreadyUser">Már regisztrált? Jelentkezzen be!</string>
    <string name="loginButton">Belépés</string>
    <string name="newUserRegi">Új fiók? Regisztráljon!</string>
    <string name="newUserRegi2">Úgy vagy itt? Regisztrálj!</string>
    <string name="newUserLogin3">Már regisztráltál? Lépj be!</string>
    <string name="newUserLogin4">Új vagy itt? Regisztrálj!</string>
    <string name="emailAddress">Email cím</string>
    <string name="name">Név</string>
    <string name="codojo">Codojo</string>
    <string name="szalagcim">Feketeöves a kódolásban!</string>
    <string name="regiSzalagcim">Regisztráció</string>
    <string name="profil">Profil</string>
    <string name="lernings">Tanulnivalók</string>
    <string name="logout">Kijelentkezés</string>
    <string name="learnings">Tanulnivalók</string>
    <string name="codojo_menu">Codojo</string>
    <string name="menu_navbar">Navbar</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="editProfileText">Adatok módosítása</string>
    <string name="fullname">Név</string>
    <string name="editUsername">Felhasználónév</string>
    <string name="editPwd">Jelszó</string>
    <string name="editEmail">Email</string>
    <string name="save">Mentés</string>
    <string name="back">Vissza</string>
    <string name="dataShow">Felhasználói adatok</string>
    <string name="next">Következő</string>
    <string name="fName">Teljes név</string>
    <string name="loggedUser">Felhasználónév</string>
    <string name="nev">Név</string>
    <string name="nev2">név</string>
    <string name="email">Email</string>
    <string name="email2">email</string>
    <string name="felhaszn_l_n_v">Felhasználónév</string>
    <string name="username2">felhasználónév</string>
    <string name="pwd1">Jelszó</string>
    <string name="pwd2">jelszó</string>
    <string name="change">Megváltoztat</string>
    <string name="chose">Kérlek válassz egy kurzust</string>
    <string name="choose">Kérlek, válassz egy kurzust!</string>
    <string name="courseJava">Java</string>
    <string name="CSharpC">C#</string>
    <string name="javaCourses">Java kurzusok és kvízek</string>
    <string name="intro">Bevezetés</string>
    <string name="home">Főoldal</string>
    <string name="backCourse">Vissza</string>
    <string name="variJava">Változók</string>
    <string name="quizVariables">Változók kvíz</string>
    <string name="operatorsJava">Operátorok</string>
    <string name="operatorsQuiz">Operátorok kvíz</string>
    <string name="controls">Elágazások, ciklusok</string>
    <string name="controlsQuiz">Elágazások, ciklusok kvíz</string>
    <string name="arrays">Tömbök, listák</string>
    <string name="arraysQuiz">Tömbök, listák kvíz</string>
    <string name="methods">Metódusok</string>
    <string name="methodsQuiz">Metódusok kvíz</string>
    <string name="classes">Osztályok</string>
    <string name="type">Típuskonverziók</string>
    <string name="finalQuiz">Java összegző kvíz</string>
    <string name="intro00">Bevezetés</string>
    <string name="TV_01">A Java egy rendkívül sokoldalú és népszerű programozási nyelv, amely széles körben használatos szoftverfejlesztésben, webalkalmazásokban, mobilalkalmazásokban és sok más területen. A Java egy erőteljes eszköz a fejlesztők számára, mivel lehetővé teszi az objektumorientált programozás előnyeinek kihasználását, egyszerűen kezelhető, és a Java alkalmazások szinte minden platformon futtathatók. Ez a bevezető arra fog összpontosítani, hogy megismertesse Önt a Java nyelv alapjaival és a programozás alapvető fogalmaival.</string>
    <string name="whatsJavaIs">Mi is pontosan a Java?</string>
    <string name="TV_02">A Java egy objektumorientált programozási nyelv, amelyet eredetileg a Sun Microsystems (később felvásárolta az Oracle Corporation) fejlesztett ki az 1990-es évek elején. Azóta a Java számos verziót és fejlesztést ért meg, amelyeknek köszönhetően a nyelv folyamatosan fejlődik és a fejlesztői igényekhez igazodik. A Java nyelvet általában az: egyszer írd meg, hogy futtathasd bárhol jelmondat jellemezte, mivel a Java alkalmazásokat Java virtuális gépen (JVM) futtatják, ami lehetővé teszi azok futtatását különböző platformokon anélkül, hogy szükség lenne a forráskód újrafordítására.</string>
    <string name="Synthax">Nyelvi elemek Javában</string>
    <string name="TV_03">A Java nyelv alapjait különböző fogalmak alkotják, például változók, adatszerkezetek, vezérlési szerkezetek, metódusok stb. Ezek az elemek építőkövei a Java programoknak, és azok megértése elengedhetetlen ahhoz, hogy hatékonyan tudjunk kódolni Java-ban. A változók tárolják az adatokat, az adatszerkezetek segítségével csoportosíthatjuk ezeket az adatokat, a vezérlési szerkezetek irányítják a program folyamatát, a metódusok pedig az újrafelhasználható kód részei.</string>
    <string name="OOPJava">Objektumorientált programozás alapjai</string>
    <string name="TV_04">Az objektumorientált programozás (OOP) alapvető elvei közé tartozik az öröklődés, az absztrakció, az egységbezárás és a sokalakúság. Ezek az elvek lehetővé teszik a programok moduláris tervezését, a kód újrafelhasználhatóságát és a fejlesztési folyamat hatékonyságát. A Java szorosan követi az OOP elveit, és lehetőséget biztosít osztályok és objektumok létrehozására, öröklődésre vagy interfészek implementálására is.</string>
    <string name="backToJavaCourseList">Vissza</string>
    <string name="variables01">Változók</string>
    <string name="TV_11">A változók az adatok tárolására szolgáló névvel ellátott helyek a memóriában. A változóknak lehet egy vagy több típusa, amely meghatározza, hogy milyen adatokat tárolhatnak. A Java nyelv támogatja a primitív változókat és a referencia változókat.</string>
    <string name="TV_12">Primitív változók: Ezek olyan alapvető adattípusok, amelyeket közvetlenül a memóriában tárolnak, és azok értékei közvetlenül az értékük. Például:</string>
    <string name="TV_13">int: egész számokat tárol, például: int age = 25;</string>
    <string name="TV_14">double: lebegőpontos számokat tárol, például: double pi = 3.14;</string>
    <string name="TV_15">boolean: logikai értéket tárol (true vagy false), például: boolean isJavaFun = true;</string>
    <string name="TV_16">char: egyetlen karaktert tárol Unicode formátumban, például: char grade = \'A\';</string>
    <string name="TV_17">Referencia változók: Ezek olyan változók, amelyek egy objektumra vagy tömbre mutatnak a memóriában. Az objektumok és tömbök tényleges adatokat és műveleteket tárolnak. Például:</string>
    <string name="TV_18">String: karakterláncokat tárol, például: String name = John;</string>
    <string name="TV_19">Object: az ősosztály, amelyből minden más osztály származik, például: Object obj = new Object();</string>
    <string name="inic">Változók deklarálása és inicializálása</string>
    <string name="TV_20"><![CDATA[A változókat deklarálni kell, mielőtt használnánk őket. A deklaráció a változó típusának és nevének meghatározását jelenti. Például: int age; <- ez egy deklaráció]]></string>
    <string name="TV_21"><![CDATA[Inicializálni kell a változókat, mielőtt értéküket elérnénk. Ez azt jelenti, hogy értéket adunk nekik a memóriában. Például: age = 25; <- ez egy inicializáció (értékadás)]]></string>
    <string name="age">Ezután az age változó 25 értéket fog tárolni.</string>
    <string name="nrOneQuiz">1. kvíz: Változók</string>
    <string name="question">Kérdés</string>
    <string name="firstOptionVar">Első válasz</string>
    <string name="secondOptionVar">Második válasz</string>
    <string name="thirdOptionVar">Harmadik válasz</string>
    <string name="fourthOptionVar">Negyedik válasz</string>
    <string name="score">Elért pontszám:</string>
    <string name="tryAgain">Próbáld újra!</string>
    <string name="python">Python</string>
    <string name="operatorsjav">Operátorok</string>
    <string name="TV_30">Az operátorok a Java nyelvben olyan speciális szimbólumok, amelyek segítségével műveleteket hajtunk végre változókon és értékeken. Az operátorok lehetnek aritmetikai, összehasonlító, logikai és bitenkénti műveleteket végzők, és lehetnek egy vagy több operandusuk.</string>
    <string name="arithmetic">1. Aritmetikai operátorok</string>
    <string name="plus">Összeadás (+): Két érték összeadása.</string>
    <string name="minus">Kivonás (-): Egy értékből kivonunk egy másikat.</string>
    <string name="multiply">Szorzás (*): Két érték szorzata.</string>
    <string name="divide">Osztás (/): Egy értéket osztunk egy másikkal.</string>
    <string name="divide02">Maradékos osztás (%): Két érték maradékos osztása.</string>
    <string name="hasonlit">2. Összehasonlító operátorok:</string>
    <string name="equal">Egyenlőség (==): Két érték egyenlőségének ellenőrzése.</string>
    <string name="notequal">Nem egyenlőség (!=): Két érték különbözőségének ellenőrzése.</string>
    <string name="restofoperators"><![CDATA[Nagyobb (>), Kisebb (<), Nagyobb vagy egyenlő (>=), Kisebb vagy egyenlő (<=): Értékek közötti összehasonlítás.]]></string>
    <string name="logic">3. Logikai operátorok:</string>
    <string name="and"><![CDATA[És (&&): Logikai ÉS művelet, mindkét feltételnek igaznak kell lennie.]]></string>
    <string name="or">Vagy (||): Logikai VAGY művelet, legalább az egyik feltétel igaznak kell lennie.</string>
    <string name="negation">Nem (!): Logikai NEGÁCIÓ, egy feltétel ellentettjét adja meg.</string>
    <string name="bitenkent">4. Bitenkénti operátorok</string>
    <string name="bitAnd"><![CDATA[És (&): Bitenkénti ÉS művelet.]]></string>
    <string name="bitOR">Vagy (|): Bitenkénti VAGY művelet.</string>
    <string name="bitXOR">XOR (^): Bitenkénti KIZÁRÓ VAGY művelet.</string>
    <string name="eltolas"><![CDATA[Balra/megfelelően eltolás (<<, >>): A bináris szám biteinek balra vagy jobbra történő eltolása.]]></string>
    <string name="plusAndMinus">5. Hozzáadási és kivonási operátorok:</string>
    <string name="plsuegyenlo">Hozzáadás és értékadás (+=): Az operandusok összeadása és az eredmény értékének hozzáadása a bal oldali operandushoz.</string>
    <string name="minusegyenlo">Kivonás és értékadás (-=): Az operandusok kivonása és az eredmény értékének levonása a bal oldali operandusból.</string>
    <string name="loops">Elágazások</string>
    <string name="operators">2. kvíz: Operátorok</string>
    <string name="loopsTV">Elágazások, ciklusok</string>
    <string name="elagazas">1. Elágazások</string>
    <string name="TV_40">Az elágazások olyan vezérlési szerkezetek, amelyek segítségével a program különböző útvonalakat követhet a futása során a feltételek függvényében. Az elágazások a program számára lehetőséget adnak arra, hogy dinamikusan döntsön a különböző feltételek teljesülése esetén.</string>
    <string name="if_else_">if-else utasítás:</string>
    <string name="TV_41">Az if-else utasítás segítségével egy feltételt vizsgálunk meg, és a feltétel igazságától függően különböző műveleteket hajtunk végre. Ha a feltétel igaz, akkor az if ág fut, ellenkező esetben az else ág fut. Ez lehetővé teszi a program számára, hogy különböző utasításokat hajtson végre különböző körülmények között.</string>
    <string name="switch_case">switch-case utasítás:</string>
    <string name="loops03">3. kvíz: Elágazások, ciklusok</string>
    <string name="arrays_">Tömbök</string>
    <string name="arraysTV">4. kvíz: Adatszerkezetek</string>
    <string name="methods2">5. kvíz: Metódusok</string>
    <string name="classesNext">Osztályok</string>
</resources>