<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".JavaCourse_06_LoopsQuizActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loops03"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:id="@+id/variablesQuizNr1"
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/variablesQuizNr1"
        android:text="@string/question"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="30sp"
        android:id="@+id/questionVariables03"
        >
    </TextView>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/questionVariables03"
    android:id="@+id/relativeOptions">
    <Button
        android:id="@+id/valasz01Variables03"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/firstOptionVar"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/valasz02Variables03"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/secondOptionVar"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:id="@+id/valasz03Variables03"
        android:text="@string/thirdOptionVar"
        android:fontFamily="@font/aldrich"
        android:textSize="18sp"
        android:textAllCaps="false"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:id="@+id/valasz04Variables03"
        android:text="@string/fourthOptionVar"
        android:fontFamily="@font/aldrich"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginBottom="30dp"
        />

</RelativeLayout>

    <Button
        android:id="@+id/backToJavaList05"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/relativeOptions"
        android:fontFamily="@font/aldrich"
        android:text="@string/back"
        android:textColor="@color/white"
        app:icon="?attr/homeAsUpIndicator" />

    <Button
        android:id="@+id/nextToArrays"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/backToJavaList05"
        android:layout_marginStart="140dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/arrays_"
        android:textColor="@color/white"
        app:icon="@drawable/iconnext" />

</RelativeLayout>