<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".JavaCourse_02_VariablesQuizActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nrOneQuiz"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="40sp"
        android:id="@+id/variablesQuizNr1"
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/variablesQuizNr1"
        android:text="@string/question"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="50sp"
        android:id="@+id/questionVariables"
        >
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeVariables"
        android:layout_below="@+id/questionVariables"
        >
        <Button
            android:id="@+id/valasz01Variables"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/firstOptionVar"
            android:textAllCaps="false"
            android:textSize="18sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/valasz02Variables"
            android:text="@string/secondOptionVar"
            android:fontFamily="@font/aldrich"
            android:textSize="18sp"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/valasz03Variables"
            android:text="@string/thirdOptionVar"
            android:fontFamily="@font/aldrich"
            android:textSize="18sp"
            android:textAllCaps="false" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:id="@+id/valasz04Variables"
            android:text="@string/fourthOptionVar"
            android:fontFamily="@font/aldrich"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_marginBottom="30dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/backToJavaList"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/relativeVariables"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/back"
        android:textColor="@color/white"
        app:icon="?attr/homeAsUpIndicator" />

    <Button
        android:id="@+id/nextToOperators"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:layout_below="@+id/backToJavaList"
        android:layout_marginStart="125dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/operatorsJava"
        android:textColor="@color/white"
        app:icon="@drawable/iconnext" />

</RelativeLayout>